--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 <nav class="navbar navbar-expand-lg bg-transparent container">
     <div class="container-fluid my-lg-2">
         <a class="navbar-brand" href="#">
-
             <b>CafeXplore</b>
         </a>
         <button aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"
@@ -74,21 +73,15 @@
                         <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Solusi Cafe</h3>
                         <ul class="d-flex list-unstyled mt-auto">
                             <li class="me-auto">
-                                <img alt="Bootstrap" class="rounded-circle border border-white" height="32"
+                                <img class="rounded-circle border border-white" height="32"
                                      src="https://www.gravatar.com/avatar/205e460b479e2e5b48aec07710c08d50"
                                      width="32">
                             </li>
-                            <li class="d-flex align-items-center me-3">
+                            <li class="d-flex align-items-center">
                                 <svg class="bi me-2" height="1em" width="1em">
                                     <use xlink:href="#geo-fill"/>
                                 </svg>
-                                <small class="fw-bold">Batam Center</small>
-                            </li>
-                            <li class="d-flex align-items-center">
-                                <svg class="bi me-2" height="1em" width="1em">
-                                    <use xlink:href="#calendar3"/>
-                                </svg>
-                                <small class="fw-bold">3d</small>
+                                <small class="fw-bold shadow-sm">Batam Center</small>
                             </li>
                         </ul>
                     </div>
@@ -102,21 +95,12 @@
                         <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Espresso Yourself</h3>
                         <ul class="d-flex list-unstyled mt-auto">
                             <li class="me-auto">
-                                <img alt="Bootstrap" class="rounded-circle border border-white" height="32"
+                                <img class="rounded-circle border border-white" height="32"
                                      src="https://www.gravatar.com/avatar/205e460b479e2e5b48aec07710c08d50"
                                      width="32">
                             </li>
                             <li class="d-flex align-items-center me-3">
-                                <svg class="bi me-2" height="1em" width="1em">
-                                    <use xlink:href="#geo-fill"/>
-                                </svg>
-                                <small class="fw-bold">Batu Aji</small>
-                            </li>
-                            <li class="d-flex align-items-center">
-                                <svg class="bi me-2" height="1em" width="1em">
-                                    <use xlink:href="#calendar3"/>
-                                </svg>
-                                <small class="fw-bold">4d</small>
+                                <small class="fw-bold shadow-sm">Batu Aji</small>
                             </li>
                         </ul>
                     </div>
@@ -129,21 +113,12 @@
                         <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Brew-tique</h3>
                         <ul class="d-flex list-unstyled mt-auto">
                             <li class="me-auto">
-                                <img alt="Bootstrap" class="rounded-circle border border-white" height="32"
+                                <img class="rounded-circle border border-white" height="32"
                                      src="https://www.gravatar.com/avatar/205e460b479e2e5b48aec07710c08d50"
                                      width="32">
                             </li>
-                            <li class="d-flex align-items-center me-3">
-                                <svg class="bi me-2" height="1em" width="1em">
-                                    <use xlink:href="#geo-fill"/>
-                                </svg>
-                                <small class="fw-bold">Bengkong Laut</small>
-                            </li>
                             <li class="d-flex align-items-center">
-                                <svg class="bi me-2" height="1em" width="1em">
-                                    <use xlink:href="#calendar3"/>
-                                </svg>
-                                <small class="fw-bold">5d</small>
+                                <small class="fw-bold shadow-sm">Bengkong Laut</small>
                             </li>
                         </ul>
                     </div>
@@ -152,8 +127,6 @@
         </div>
     </div>
 </main>
-<script crossorigin="anonymous"
-        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-        src="js/bootstrap.bundle.min.js"></script>
+<script src="js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
