--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
         <h2 class="pb-2 border-bottom" id="CafeFeatured">Find the Perfect Cafe</h2>
         <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
             <div class="col">
+                <a href="" class="text-decoration-none">
                 <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg border-0"
                      style="background-image: url('https://source.unsplash.com/random/?cafe');">
                     <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
@@ -86,10 +87,13 @@
                         </ul>
                     </div>
                 </div>
+                </a>
             </div>
 
             <div class="col">
-                <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg border-0"
+                <a href="" class="text-decoration-none">
+                <div class="card card-cover
+                 ah-100 overflow-hidden text-bg-dark rounded-4 shadow-lg border-0"
                      style="background-image: url('https://source.unsplash.com/random/?cafe');">
                     <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
                         <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Espresso Yourself</h3>
@@ -105,24 +109,27 @@
                         </ul>
                     </div>
                 </div>
+                </a>
             </div>
             <div class="col">
-                <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg border-0"
-                     style="background-image: url('https://source.unsplash.com/random/?cafe');">
-                    <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
-                        <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Brew-tique</h3>
-                        <ul class="d-flex list-unstyled mt-auto">
-                            <li class="me-auto">
-                                <img class="rounded-circle border border-white" height="32"
-                                     src="https://www.gravatar.com/avatar/205e460b479e2e5b48aec07710c08d50"
-                                     width="32">
-                            </li>
-                            <li class="d-flex align-items-center">
-                                <small class="fw-bold shadow-sm">Bengkong Laut</small>
-                            </li>
-                        </ul>
+                <a href="" class="text-decoration-none">
+                    <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg border-0"
+                         style="background-image: url('https://source.unsplash.com/random/?cafe');">
+                        <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
+                            <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Brew-tique</h3>
+                            <ul class="d-flex list-unstyled mt-auto">
+                                <li class="me-auto">
+                                    <img class="rounded-circle border border-white" height="32"
+                                         src="https://www.gravatar.com/avatar/205e460b479e2e5b48aec07710c08d50"
+                                         width="32">
+                                </li>
+                                <li class="d-flex align-items-center">
+                                    <small class="fw-bold shadow-sm">Bengkong Laut</small>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
-                </div>
+                </a>
             </div>
         </div>
     </div>
