Add card-cafe id

--- a/index.html
+++ b/index.html
@@ -68,8 +68,7 @@
         <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
             <div class="col">
                 <a href="" class="text-decoration-none">
-                <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg border-0"
-                     style="background-image: url('https://source.unsplash.com/random/?cafe');">
+                <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg border-0" id="card-cafe">
                     <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
                         <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Solusi Cafe</h3>
                         <ul class="d-flex list-unstyled mt-auto">
@@ -93,8 +92,7 @@
             <div class="col">
                 <a href="" class="text-decoration-none">
                 <div class="card card-cover
-                 ah-100 overflow-hidden text-bg-dark rounded-4 shadow-lg border-0"
-                     style="background-image: url('https://source.unsplash.com/random/?cafe');">
+                 ah-100 overflow-hidden text-bg-dark rounded-4 shadow-lg border-0" id="card-cafe2">
                     <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
                         <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Espresso Yourself</h3>
                         <ul class="d-flex list-unstyled mt-auto">
@@ -113,8 +111,7 @@
             </div>
             <div class="col">
                 <a href="" class="text-decoration-none">
-                    <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg border-0"
-                         style="background-image: url('https://source.unsplash.com/random/?cafe');">
+                    <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg border-0" id="card-cafe3">
                         <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
                             <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Brew-tique</h3>
                             <ul class="d-flex list-unstyled mt-auto">
