--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div class="container col-md-12 px-2 py-4">
         <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
             <div class="col-10 col-sm-12 col-lg-6">
-                <img src="https://cdn-icons-png.flaticon.com/512/4171/4171640.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="400" height="300" loading="lazy">
+                <img src="budok.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="400" height="300" loading="lazy">
             </div>
             <div class="col-lg-6">
                 <h1 class="display-5 fw-bold lh-1 mb-3">Discover the Best Cafes with Us!
