--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
 <!--            <h1 class="display-5 fw-bold">Welcome to CafeXplore</h1>-->
 <!--        </div>-->
 <!--    </div>-->
+    
+    <div class="container">
+        <img src="budook.png" alt="">
+    </div>
 
     <div class="container col-md-12 px-2 py-4">
         <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
