--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
         <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
             <div class="col-10 col-sm-12 col-lg-6">
                 <img alt="Hero" class="d-block mx-lg-auto img-fluid"
-                     height="300" loading="lazy" src="https://cdn-icons-png.flaticon.com/512/4171/4171640.png" width="300">
+                     height="550" loading="lazy" src="https://cdn-icons-png.flaticon.com/512/4171/4171640.png"
+                     width="550">
             </div>
             <div class="col-lg-6">
                 <h1 class="display-5 fw-bold lh-1 mb-3">Discover the Best Cafes with Us!
@@ -149,6 +150,21 @@
         </div>
     </div>
 </main>
+<footer class="py-4">
+    <div class="container">
+        <footer class="py-3 my-4">
+            <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+                <li class="nav-item"><a class="nav-link px-2 text-muted" href="#">Home</a></li>
+                <li class="nav-item"><a class="nav-link px-2 text-muted" href="#">Featured</a></li>
+                <li class="nav-item"><a class="nav-link px-2 text-muted" href="#">Location</a></li>
+            </ul>
+            <p class="text-center text-muted">Created with ❤️ By CafeXplore </p>
+        </footer>
+    </div>
+</footer>
 <script src="js/bootstrap.bundle.min.js"></script>
+<script>
+    const currentYear = new Date().getFullYear();
+</script>
 </body>
 </html>
